# DevNest

./: .gitignore  CHANGELOG.md  DISTRIBUTION.md  LICENSE  README.md  go.mod  go.sum  implementation_plan.md  main.go  test.html
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
backend/: go.mod  go.sum
backend/cmd/: about_handlers.go  api_handlers.go  cli.go  cli_daemon.go  cli_services.go  daemon.go  database_handlers.go  database_table_handlers.go  extras_handlers.go  herd_features_handlers.go  hosts_handlers.go  install_handlers.go  launcher.go  lifecycle.go  mcp.go  mcp_stdio.go  node_handlers.go  output_handlers.go  php_handlers.go  root.go  sites_handlers.go  stacks_handlers.go  (+1 more)
cmd/: daemon.go  root.go
docs/: RELEASE_v0.1.1.md  RELEASE_v0.1.2.md  RELEASE_v0.1.3.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json  updater.pubkey
frontend/src-tauri/binaries/: .gitkeep
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  runtime.rs
frontend/src-tauri/windows/: hooks.nsh
scripts/: Open-DevNest.vbs  build-desktop.ps1  dev-tauri.ps1  dev.ps1  dev.sh  generate-app-icon.ps1  generate-updater-keys.ps1  install-caddy.ps1  install-php.ps1  make-latest-json.ps1  publish-release.ps1  release.ps1  send-test-dump.ps1  send-test-log.ps1  send-test-mail.ps1  smoke-test.ps1  stop-daemon.ps1  sync-updater-pubkey.ps1
website/: README.md  index.html  package.json
(+206 files in other folders)
